@@ -19,8 +19,7 @@
 
 % License text + \write to log file.
 \<TeX4ht copywrite\><<<
-|<TeX4ht copyright|>
-\immediate\write-1{version |version}
+|<TeX4ht copyright|>\immediate\write-1{version |version}
 >>>
 
-% There are two copies of this in tex4ht-mktex.tex.
+% Two additional copies in tex4ht-mktex.tex.
