@@ -1,5 +1,12 @@
 2010-03-08  Karl Berry  <karl@gnu.org>
 
+	* tex4ht-cond4ht.tex: license notices.
+	* Makefile: add derivations.
+	* tex4ht-cpright.tex: note additional copy.
+	* all files: no period ending copyright lines, I guess.
+
+2010-03-08  Karl Berry  <karl@gnu.org>
+
 	* tex4ht-docbook-xtpipes.tex: license notices.
 	* Makefile: add derivations.
 
